tests/NormalTests/paczka1/fuzzy1/80252422.err
Error in line 3: KDTHb4ps S682 1,4
Error in line 13: bMw2E5rxDk A939 31,01
Error in line 7: bMw2E5rxDk A973 18,9
Error in line 6: ry48t57pVt S682 35,6
